fix signup login content height on mobile

--- a/src/components/headerBar.css
+++ b/src/components/headerBar.css
@@ -8,7 +8,7 @@
   border-bottom-right-radius: 10px;
   max-width: 1500px;
   background: var(--header-title);
-  box-shadow: 0 8px 15px;
+  box-shadow: 0 5px 5px;
   padding: 0.2rem .5rem;
 }
 
